--- a/templates/master.cf.erb
+++ b/templates/master.cf.erb
@@ -25,6 +25,9 @@ submission inet n       -       n       -       -       smtpd
   -o smtpd_sasl_auth_enable=<%= @submission_smtpd_sasl_auth_enable %>
   -o smtpd_client_restrictions=<%= @submission_smtpd_client_restrictions %>
   -o milter_macro_daemon_name=ORIGINATING
+<% @smtp_content_filter.each do |content_filter| -%>
+  -o content_filter=<%= content_filter %>
+<% end -%>
 <% end -%>
 <% if @ssl -%>
 smtps     inet  n       -       n       -       -       smtpd
