--- a/templates/master.cf.erb
+++ b/templates/master.cf.erb
@@ -41,7 +41,7 @@ smtps     inet  n       -       n       -       -       smtpd
 <% end -%>
 <% end -%>
 #628      inet  n       -       n       -       -       qmqpd
-pickup    fifo  n       -       n       60      1       pickup
+pickup    fifo  n       -       n       60      1       pickup -o receive_override_options=
 cleanup   unix  n       -       n       -       0       cleanup
 qmgr      fifo  n       -       n       300     1       qmgr
 #qmgr     fifo  n       -       n       300     1       oqmgr
